Atualizações QA Dev responsável

--- a/store/blocks/cms/fabricantes.jsonc
+++ b/store/blocks/cms/fabricantes.jsonc
@@ -68,7 +68,7 @@
           "blockClass":[
              "cms-page-content-fabricante"
           ],
-          "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n[Ver localização](#)",
+          "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n<a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
           "textAlignment":"initial",
           "textPosition":"initial"
         }
@@ -78,7 +78,7 @@
              "blockClass":[
                 "cms-page-content-fabricante"
              ],
-             "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n[Ver localização](#)",
+             "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n<a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
              "textAlignment":"initial",
              "textPosition":"initial"
           }
@@ -88,7 +88,7 @@
           "blockClass":[
              "cms-page-content-fabricante"
           ],
-          "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n[Ver localização](#)",
+          "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n<a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
           "textAlignment":"initial",
           "textPosition":"initial"
        }
@@ -98,7 +98,7 @@
           "blockClass":[
              "cms-page-content-fabricante"
           ],
-          "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n [Ver localização](#)",
+          "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n <a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
           "textAlignment":"initial",
           "textPosition":"initial"
        }
@@ -109,7 +109,7 @@
            "blockClass":[
               "cms-page-content-fabricante"
            ],
-           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n [Ver localização](#)",
+           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n <a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
            "textAlignment":"initial",
            "textPosition":"initial"
         }
@@ -119,7 +119,7 @@
            "blockClass":[
               "cms-page-content-fabricante"
            ],
-           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n [Ver localização](#)",
+           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n <a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
            "textAlignment":"initial",
            "textPosition":"initial"
         }
@@ -129,7 +129,7 @@
            "blockClass":[
               "cms-page-content-fabricante"
            ],
-           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n [Ver localização](#)",
+           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n <a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
            "textAlignment":"initial",
            "textPosition":"initial"
         }
@@ -139,7 +139,7 @@
            "blockClass":[
               "cms-page-content-fabricante"
            ],
-           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n [Ver localização](#)",
+           "text":"#### Rodolfo Eletro\nRua. Nelson Gama de Oliveira, 739 - CJ 104B, Vila Andrade, São Paulo.\n\n <a class='vtex-rich-text-0-x-link vtex-rich-text-0-x-link--cms-page-content-fabricante' href='https://maps.app.goo.gl/RXYgaVX6KjLPUtdDA' target='_blank'>Ver localização</a>",
            "textAlignment":"initial",
            "textPosition":"initial"
         }
