--- a/manifest.json
+++ b/manifest.json
@@ -67,7 +67,8 @@
     "vtex.order-manager": "0.x",
     "vtex.seller-selector": "0.x",
     "vtex.store-media": "0.x",
-    "vtex.store-graphql": "2.x"
+    "vtex.store-graphql": "2.x",
+    "vtex.challenge-tp-condition": "0.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x",
